src/objects/nonc__Prospect_validation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>nonc__Additional_Non_Client_RecordType__c</fullName>
        <description>This field must contain the Api Name of the additional RecordType of Account that will be used for additional Non Client (like &quot;Group&quot;)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field must contain the Api Name of the additional RecordType of Account that will be used for additional Non Client (like &quot;Group&quot;)</inlineHelpText>
        <label>Additional Non Client RecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Additional_field_duplicate_validation__c</fullName>
        <description>Contains the api name of the additional field to be used for duplicate control. This field must be of type text</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the api name of the additional field to be used for duplicate control. This field must be of type text</inlineHelpText>
        <label>Additional field in duplicate validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__ClassName_Validation__c</fullName>
        <description>Contains the name of the class that implements the interface &apos;NonClient_interface_prospect&apos; and contains the methods for controlling duplicates and validating the creation of the non-client.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the name of the class that implements the interface &apos;NonClient_interface_prospect&apos; and contains the methods for controlling duplicates and validating the creation of the non-client.</inlineHelpText>
        <label>Custom validation Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Country_field__c</fullName>
        <description>Contains the API Name of the field which contains the country of the clients. If it is complete it is displayed in the table of duplicated clients.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the API Name of the field which contains the country of the clients. If it is complete it is displayed in the table of duplicated clients.</inlineHelpText>
        <label>Country field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Custom_duplicate_validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked, when clicking &apos;Contrast&apos; button, the duplicate control is done by the method &apos;checkDuplicateNonClients&apos; of the class defined in this custom setting.</description>
        <inlineHelpText>If it is checked, when clicking &apos;Contrast&apos; button, the duplicate control is done by the method &apos;checkDuplicateNonClients&apos; of the class defined in this custom setting.</inlineHelpText>
        <label>Custom duplicate validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nonc__Custom_validation_creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, when saving the non-client, uses the &apos;validateNonCliente&apos; method of the class defined in this custom setting to validate the creation.</description>
        <inlineHelpText>if checked, when saving the non-client, uses the &apos;validateNonCliente&apos; method of the class defined in this custom setting to validate the creation.</inlineHelpText>
        <label>Custom validation in creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nonc__Form_Help_Text__c</fullName>
        <description>Help text to show on form.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Help Text</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__List_View_Name__c</fullName>
        <description>Contains the API Name of the list view which is filtered by Non client record type and is used in Non Client custom tab.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the API Name of the list view which is filtered by Non client record type and is used in Non Client custom tab.</inlineHelpText>
        <label>List View Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Lookup_Condition_Additional__c</fullName>
        <description>Condition for filtering the results of the lookup to client to be shown in the mobile form (for additional recordtype).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Condition for filtering the results of the lookup to client to be shown in the mobile form (for additional recordtype).</inlineHelpText>
        <label>Lookup Condition Additional Recordtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Lookup_Condition__c</fullName>
        <description>Condition for filtering the results of the lookup to client to be shown in the mobile form (for primary recordtype).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Condition for filtering the results of the lookup to client to be shown in the mobile form (for primary recordtype).</inlineHelpText>
        <label>Lookup Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Lookup_Field_Additional__c</fullName>
        <description>Lookup field to client that will be shown in the mobile form (for additional recordtype).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Lookup field to client that will be shown in the mobile form (for additional recordtype).</inlineHelpText>
        <label>Lookup Field Additional Recordtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Lookup_Field__c</fullName>
        <description>Lookup field to client that will be shown in the mobile form (for primary recordtype).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Lookup field to client that will be shown in the mobile form (for primary recordtype).</inlineHelpText>
        <label>Lookup Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Non_Client_RecordType__c</fullName>
        <description>This field must contain the Api Name of the RecordType of Account that will be used for Non Client.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field must contain the Api Name of the RecordType of Account that will be used for Non Client.</inlineHelpText>
        <label>Non Client RecordType</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Required_Unique_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, it is not possible to create no customers with field &apos;Unique Id field name&apos; empty.</description>
        <inlineHelpText>If checked, it is not possible to create no customers with field &apos;Unique Id field name&apos; empty.</inlineHelpText>
        <label>Required Unique ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nonc__Type_field__c</fullName>
        <description>Contains the API Name of the field which contains the type of the clients. If it is complete it is displayed in the table of duplicated clients.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the API Name of the field which contains the type of the clients. If it is complete it is displayed in the table of duplicated clients.</inlineHelpText>
        <label>Type field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonc__Unique_Id_field_name__c</fullName>
        <description>Contains the API Name of the field from Account which identifies the Non Client. (Fiscal Id...) This field must be of type text</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the API Name of the field from Account which identifies the Non Client. (Fiscal Id...) This field must be of type text</inlineHelpText>
        <label>Unique Id field name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Prospect Validation</label>
</CustomObject>